Some comment here.

--- a/source/_posts/2014-12-05-kvckvo.markdown
+++ b/source/_posts/2014-12-05-kvckvo.markdown
@@ -1,13 +1,13 @@
-
 ---
 
 layout: post
-title: "谈谈KVO&KVC精髓"
+title: "谈谈KVO与KVC精髓"
 date: 2014-12-05 13:53:19 +0800
 comments: true
 categories: 底层开发 
 
 --- 
+
 Swift中使用KVC和KVO的类都必须必须继承自NSObject
 
 
