Some comment here.

--- a/source/_posts/2014-03-21-init pic.markdown
+++ b/source/_posts/2014-03-21-init pic.markdown
@@ -13,6 +13,13 @@ categories: 项目实战
 	UIImage* image=[UIImage imageNamed:@"1.jpg"];  
 ######2.从网络读取 
  
+
+
+<!--more-->
+
+
+
+
 	NSURL *url=[NSURL URLWithString:@"http://www.sinaimg.cn/qc/photo_auto/chezhan/2012/50/00/15/80046_950.jpg"];  
 	UIImage *imgFromUrl =[[UIImage alloc]initWithData:[NSData dataWithContentsOfURL:url]];  
 ######3.从手机本地读取 
