--- a/source/_posts/2014-03-21-mvc.markdown
+++ b/source/_posts/2014-03-21-mvc.markdown
@@ -12,6 +12,13 @@ categories: 项目实战
 
 相信你对 MVC 设计模式 并不陌生，只是不能完全理解其中的含义或者不能很好的使用它。
 
+
+
+<!--more-->
+
+
+
+
 从字面意思来理解， Modal , View , Controller ，其用意在于将数据与视图分离开来－－－－－－解藕。  
 
 在iOS cocoa touch 编程中， MVC机制被发挥得淋漓尽致。 MVC 示意图如下。 只有充分理解了MVC，才能在编写出优雅的iOS app。为充分理解 MVC， 相关的概念（比如： Delegate、 Protocol、 Notification 等）也要了然于胸。
