--- a/source/_posts/2014-05-05-keyoc.markdown
+++ b/source/_posts/2014-05-05-keyoc.markdown
@@ -12,6 +12,13 @@ categories: 程序员必备
 
 
 
+
+<!--more-->
+
+
+
+
+
 | 关键字 | 总结|
 | ------------- |:-----------:|
 | atomic	| atomic是Objc使用的一种线程保护技术，基本上来讲，是防止在写未完成的时候被另外一个线程读取，造成数据错误。而这种机制是耗费系统资源的，所以在iPhone这种小型设备上，如果没有使用多线程间的通讯编程，那么nonatomic是一个非常好的选择。| 
