--- a/source/_posts/2014-05-20-sign.markdown
+++ b/source/_posts/2014-05-20-sign.markdown
@@ -16,6 +16,13 @@ categories: 性能问题
 
 ####一、数字签名（digital signature）
 
+
+
+<!--more-->
+
+
+
+
 对指定信息使用哈希算法，得到一个固定长度的信息摘要，然后再使用 私钥 （注意必须是私钥）对该摘要加密，就得到了数字签名。所谓的代码签名就是这个意思。
 
 ####二、数字证书（digital certificate）
