--- a/source/_posts/2014-06-16-runtime.markdown
+++ b/source/_posts/2014-06-16-runtime.markdown
@@ -17,6 +17,13 @@ categories: 底层开发
 官方介绍：
 
 
+
+<!--more-->
+
+
+
+
+
 {% img /images/runtime001.png Caption %}  
 
 {% img /images/runtime002.png Caption %}  
