--- a/source/_posts/2014-08-14-unio.markdown
+++ b/source/_posts/2014-08-14-unio.markdown
@@ -16,6 +16,13 @@ IOS系统中，获取设备唯一标识的方法有很多：
 
 #####一.UDID(Unique Device Identifier)
 
+
+
+<!--more-->
+
+
+
+
 	 UDID的全称是Unique Device Identifier，顾名思义，它就是苹果IOS设备的唯一识别码，它由40个字符的字母和数字组成。
 
 #####二.UUID(Universally Unique Identifier) 
