--- a/source/_posts/2014-08-28-protocol.markdown
+++ b/source/_posts/2014-08-28-protocol.markdown
@@ -15,6 +15,13 @@ categories: 高级开发
 ------------------------------------------------------------------------------------
 声明正式协议使用@protocol指令，以@end结尾。
 
+
+
+<!--more-->
+
+
+
+
 	@protocol MyXMLSupport
 	- initFromXMLRepresentation:(NSXMLElement *)XMLElement;
 	- (NSXMLElement *)XMLRepresentation;
