--- a/source/_posts/2014-11-25-fmdb.markdown
+++ b/source/_posts/2014-11-25-fmdb.markdown
@@ -14,6 +14,13 @@ FMDB详解
 
 于是，就出现了一系列将SQLite API进行封装的库，例如FMDB、PlausibleDatabase、sqlitepersistentobjects等，FMDB (https://github.com/ccgus/fmdb) 是一款简洁、易用的封装库，这一篇文章简单介绍下FMDB的使用。
 
+
+
+<!--more-->
+
+
+
+
 在FMDB下载文件后，工程中必须导入，并使用 libsqlite3.dylib 依赖包。
 
 FMDB同时兼容ARC和非ARC工程，会自动根据工程配置来调整相关的内存管理代码。
