--- a/source/_posts/2015-12-11-zhengze.markdown
+++ b/source/_posts/2015-12-11-zhengze.markdown
@@ -14,9 +14,15 @@ categories: 程序员必备
 
 一个通用的网络爬虫的框架如图所示：
 
-
-
 {% img /images/zhengze001.png Caption %}  
+
+
+
+
+<!--more-->
+
+
+
 
 
 #####网络爬虫的基本工作流程如下：
