--- a/source/_posts/2014-07-23-netuse.markdown
+++ b/source/_posts/2014-07-23-netuse.markdown
@@ -12,6 +12,13 @@ categories: 高级开发
 
 关于网络请求的重要性我想不用多说了吧。对于移动客户端来说，网络的重要性不言而喻。常见的网络请求有同步GET， 同步POST， 异步GET， 异步POST。今天来看一下四种网络请求的实现方式。
 
+
+
+<!--more-->
+
+
+
+
 一、同步GET
 
 	// 1.将网址初始化成一个OC字符串对象
