Some comment here.

--- a/source/_posts/2015-10-13-zhengze.markdown
+++ b/source/_posts/2015-10-13-zhengze.markdown
@@ -7,7 +7,7 @@ categories: 程序员必备
 ---
 
 
-第一篇我们有介绍到使用青花瓷抓包，也提到了后面会介绍java和python实现，本篇就介绍一下怎么使用python抓取网络数据。
+第一篇我们有介绍到使用青花瓷抓包，也提到了后面会介绍java和python实现，本篇就介绍一下怎么使用正则表达式抓取网络数据。
 
 
 先来看看网络爬虫的基本原理：
