--- a/source/_posts/2015-10-20-java.markdown
+++ b/source/_posts/2015-10-20-java.markdown
@@ -7,6 +7,8 @@ categories: 程序员必备
 ---
 
 
+> 希望izai开始之前你先看看：[搭建服务器](http://al1020119.github.io/blog/2014/02/21/fu-wu-qi-da-jian/),除非你已经有相应的服务器。
+
 前面我们介绍了怎么使用青花瓷和正则表达式抓包，今天就来介绍一下最后一篇：使用java抓包
 
 java是大家再熟悉不过了，所以不用太担心有多难，因为里面涉及的java技术几乎为0（有点夸张），所以想想看完这篇之后你就会知道怎么使用java快速抓包，还能根据自己的喜好选择对应的方式！
