--- a/source/_posts/2014-07-23-netuse.markdown
+++ b/source/_posts/2014-07-23-netuse.markdown
@@ -119,3 +119,32 @@ categories: 高级开发
 * 同步链接：主线程去请求数据，当数据请求完毕之前，其他线程一律不响应，会造成程序就假死现象。
 
 * 异步链接：会单独开一个线程去处理网络请求，主线程依然处于可交互状态,程序运行流畅。
+
+
+######最后总结一些网络请求中常见返回码的含义：
+
+* 200 [成功] 服务器已成功处理了请求
+
+* 202 [已接受] 已接受请求，但尚未处理
+
+* 204 成功处理了请求，但没有返回内容
+
+* 206 服务器成功处理了部分 GET 请求
+
+* 301 请求的网页已永久移动到新位置
+
+* 302 从不同位置响应请求,以后恢复
+
+* 305 请求者只能使用代理访问请求的网页
+
+* 400 错误请求，服务器不理解请求的语法
+
+* 401 未授权，请求要求身份验证
+
+* 403 [禁止] 服务器拒绝请求
+
+* 404 [未找到] 服务器找不到请求的网页
+
+* 500 服务器遇到错误，无法完成请求
+
+* 502 作为网关或代理从上游收到无效响应
