Some comment here.

--- a/source/_posts/2013-11-11-init pic.markdown
+++ b/source/_posts/2013-11-11-init pic.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "初始化图片"
 date: 2013-11-11 13:53:19 +0800
 comments: true
-categories: 项目实战
+categories: Projects
 
 ---
 ###一.读取图片
