--- a/source/_posts/2014-01-25-fmdb.markdown
+++ b/source/_posts/2014-01-25-fmdb.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "FMDB你了解多少？"
 date: 2014-01-25 13:53:19 +0800
 comments: true
-categories: 高级开发 
+categories: Advanced 
 
 --- 
 
