--- a/source/_posts/2014-05-05-keyoc.markdown
+++ b/source/_posts/2014-05-05-keyoc.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "常用关键字汇总"
 date: 2014-05-05 13:53:19 +0800
 comments: true
-categories: 程序员必备 
+categories: Developer 
 
 --- 
 
