--- a/source/_posts/2014-05-15-paixu.markdown
+++ b/source/_posts/2014-05-15-paixu.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "排序算法精髓"
 date: 2014-05-20 13:53:19 +0800
 comments: true
-categories: 全栈工程师必备 
+categories: Algorithm 
 
 --- 
 
