--- a/source/_posts/2014-08-28-protocol.markdown
+++ b/source/_posts/2014-08-28-protocol.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "不平的条约（协议）"
 date: 2014-08-28 13:53:19 +0800
 comments: true
-categories: 高级开发 
+categories: Advanced 
 
 --- 
  
