--- a/source/_posts/2015-10-20-java.markdown
+++ b/source/_posts/2015-10-20-java.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "爬虫必备-java抓包"
 date: 2015-10-20 12:03:23 +0800
 comments: true
-categories: 程序员必备
+categories: Necessary
 ---
 
 
