Some comment here.

--- a/source/_posts/2016-01-25-iCocos.markdown
+++ b/source/_posts/2016-01-25-iCocos.markdown
@@ -9,9 +9,7 @@ categories: Summary
  
 引言：
 
-* 由于过年和公司的原因，近期不会有新的文章退出。
-
-
+* 由于过年和公司的原因，近期不会有新的文章推出。
 
 
 
@@ -19,33 +17,48 @@ categories: Summary
 
 
 
-{% img /images/psbnixiangbook.jgp Caption %}  
+{% img /images/psbnixiangbook.jpg Caption %}  
 
 
 
 
-######所以后期会退出一系列ios逆向相关技术，会根据自己的学习与研究结合《沙梓社/吴航/刘瑾》，念茜等大牛的大作，整理一套相关文章，敬请期待！
+######所以后期会推出一系列ios逆向相关技术，会根据自己的学习与研究结合《沙梓社/吴航/刘瑾》，念茜等大牛的大作，整理一套相关文章，敬请期待！
 
 
 
-文章的大致目录如下（可能会有变动，但是不会很大，结合上面的书进行整理）：
++ 文章的大致目录如下（可能会有变动，但是不会很大，结合上面的书进行整理）：
 
-1. 逆向工程前奏篇－方法与工具介绍
-2. 逆向工程前奏篇－安装包格式总结
-3. 逆向工程准备篇－逆向技术分析
-4. 逆向工程准备篇－常见越狱方法
-5. 逆向工程准备篇－环境简单介绍
-6. 逆向工程实战篇－检测是否越狱
-7. 逆向工程作用篇－反编译和防反编译
-8. 逆向工程初步篇－静态分析及使用
-9. 逆向工程应用篇－资源文件获取
-10. 逆向工程应用篇－简单App实战
-11. 逆向工程总结篇－使用Tweak工程
-12. 逆向工程实战篇－游戏反编译
-13. 逆向工程实战篇－非6S实现3DTouch
-14. 逆向工程总结篇－逆向支付宝
-15. 逆向工程总结篇－驱动开发
-16. 逆向工程总结篇－iOS逆向总结
+	- 1.逆向工程前奏篇－方法与工具介绍
+	
+	- 2.逆向工程前奏篇－安装包格式总结
+	
+	- 3.逆向工程准备篇－逆向技术分析
+	
+	- 4.逆向工程准备篇－常见越狱方法
+	
+	- 5.逆向工程准备篇－环境简单介绍
+	
+	- 6.逆向工程实战篇－检测是否越狱
+	
+	- 7.逆向工程作用篇－反编译和防反编译
+	
+	- 8.逆向工程初步篇－静态分析及使用
+	
+	- 9.逆向工程应用篇－资源文件获取
+	
+	- 10.逆向工程应用篇－简单App实战
+	
+	- 11.逆向工程总结篇－使用Tweak工程
+	
+	- 12.逆向工程实战篇－游戏反编译
+	
+	- 13.逆向工程实战篇－非6S实现3DTouch
+	
+	- 14.逆向工程总结篇－逆向支付宝
+	
+	- 15.逆向工程总结篇－驱动开发
+	
+	- 16.逆向工程总结篇－iOS逆向总结
 
 相关技术请参照：
 
