Some comment here.

--- a/source/_posts/2016-01-25-iCocos.markdown
+++ b/source/_posts/2016-01-25-iCocos.markdown
@@ -60,6 +60,10 @@ categories: Summary
 	
 	- 16.逆向工程总结篇－iOS逆向总结
 
+
+最后，听说今天到处都开始下雪了，我的老家（江西），今天带来的今年的第一场大雪的，希望各位都注意保暖，多多关爱家人，身体是革命的本钱（这句话，程序🐶最懂了）。
+
+
 相关技术请参照：
 
 * [http://www.kanxue.com/](http://www.kanxue.com/)
