--- a/source/_posts/2016-03-20-siyouapi.markdown
+++ b/source/_posts/2016-03-20-siyouapi.markdown
@@ -3,7 +3,10 @@ layout: post
 title: "私有API"
 date: 2016-03-20 13:32:08 +0800
 comments: true
-categories: Summary
+categories: iCocos博客
+keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
+
+
 ---
 
 一．基本知识
