Some comment here.

--- a/source/_posts/2013-05-25-mvc.markdown
+++ b/source/_posts/2013-05-25-mvc.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "MVC初探+实战"
 date: 2013-05-25 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Senior
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
