--- a/source/_posts/2015-04-15-h5chu-tan.markdown
+++ b/source/_posts/2015-04-15-h5chu-tan.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "H5初探"
 date: 2015-04-15 15:51:33 +0800
 comments: true
-categories: Reverse
+categories: Full Stack
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
