--- a/source/_posts/2013-05-11-init pic.markdown
+++ b/source/_posts/2013-05-11-init pic.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "初始化图片"
 date: 2013-05-11 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Foundation
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
