--- a/source/_posts/2014-02-10-metal.markdown
+++ b/source/_posts/2014-02-10-metal.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "Metal深究"
 date: 2015-10-10 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Senior
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
