--- a/source/_posts/2014-05-26-sign.markdown
+++ b/source/_posts/2014-05-26-sign.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "签名机制"
 date: 2014-05-20 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Senior
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
