--- a/source/_posts/2014-06-16-runtime.markdown
+++ b/source/_posts/2014-06-16-runtime.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "玩转运行时"
 date: 2014-06-16 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Low-Level
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
