--- a/source/_posts/2014-08-28-protocol.markdown
+++ b/source/_posts/2014-08-28-protocol.markdown
@@ -4,7 +4,7 @@ layout: post
 title: "不平的条约（协议）"
 date: 2014-08-28 13:53:19 +0800
 comments: true
-categories: Reverse
+categories: Foundation
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
