--- a/source/_posts/2015-10-13-zhengze.markdown
+++ b/source/_posts/2015-10-13-zhengze.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "爬虫必备-正则表达式抓包"
 date: 2015-10-13 10:03:23 +0800
 comments: true
-categories: Reverse
+categories: Full Stack
 description: iCocos博客
 keywords: iCocos, iOS开发, 博客, 技术分析, 文章, 学习, 曹黎, 曹理鹏
 
