Some comment here.

--- a/source/_posts/2016-03-20-siyouapi.markdown
+++ b/source/_posts/2016-03-20-siyouapi.markdown
@@ -187,3 +187,21 @@ You should have received a copy of the GNU General Public License along with thi
 
 但是，遗憾的是，目前我研究出来的只有开启蓝牙，关于设备匹配，数据传输方面没什么进展。
 希望有人能再接再厉，在我的基础上研究出设备匹配和数据传输的方法
+
+
+===
+
+    Q Q：2211523682/790806573
+
+    微信：18370997821/13148454507
+    
+    微博WB:http://weibo.com/u/3288975567?is_hot=1
+    
+	git博文：http://al1020119.github.io/
+	
+	github：https://github.com/al1020119
+
+
+{% img /images/iCocosCoder.jpg Caption %}  
+
+{% img /images/iCocosPublic.jpg Caption %}  
