Some comment here.

--- a/source/_posts/2016-08-31-m3u8.markdown
+++ b/source/_posts/2016-08-31-m3u8.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "M3U8"
+title: "直播-M3U8"
 date: 2016-09-06 14:41:56 +0800
 comments: true
 categories: Audio  Video and Lve Radio
@@ -16,7 +16,12 @@ categories: Audio  Video and Lve Radio
 	1.一个文件的绝对路径
 	2.相对于m3u文件的相对路径
 	3.一个网络url
-	
+
+
+<!--more-->	
+
+
+
 	以#好开头的，是m3u的注释，而一些m3u扩展指令也是由#号开头
 	
 	m3u的一个常见用途是作为一个指向网络中一个流媒体的播放列表，比如在线视频、广播等等。
